# dart-ffi-callback-proof-of-concept

./: .gitignore  README.md  pubspec.yaml
lib/: CMakeLists.txt  async_callback_test_integration.dart  bindings.c  bindings.h  definitions.dart  isolate_rpc_async.dart  native_async.dart
lib/include/: dart_api.h  dart_api_dl.c  dart_native_api.h
lib/src/: CMakeLists.txt  async-sem.h  bindings.c  bindings.h
lib/src/wip/: CMakeLists.txt  async.h  async_test.c
test/: async_callback_bindings_test.dart  async_callback_poc_test.dart  async_callback_test_integration_test.dart
